--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "browserstack-appium-wdio-cucumber",
+    "name": "first-cry-application",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
