--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -1,10 +1,21 @@
 name: CI-SAMPLE-TST
-#on: [push, pull_request]
 on: 
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
   workflow_dispatch:
-permissions:
-  contents: write
-  pull-requests: write
+    inputs:
+      testExecKey: 
+        description: 'Test firstcry App'
+        default: ''
+        required: true
+      projectKey:
+        description: 'Test firstcry App'
+        default: ''
+        required: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,6 +32,16 @@ jobs:
         - name: Install
           run: npm install
         - name: Test
+          env:
+            USERNAME: ${{ secrets.JIRA_USERNAME }}
+            PASSWORD: ${{ secrets.JIRA_PASSWORD }}
+            XRAY_CLOUD: "false"
+            XRAY_BASE_URL: ${{ secrets.JIRA_BASEURL }}
+            TEST_FORMAT: "junit"
+            TEST_PATHS: "**/xray-report.xml"
+            TEST_PLAN_KEY: "${{ secrets.JIRA_TEST_PLAN_KEY }}"
+            PROJECT_KEY: "${{ secrets.JIRA_PROJECT_KEY }}"
+            TEST_ENVIRONMENTS: "NODE_${{ matrix.node-version }}"
           run: npm run test:browserstack.first.tst:linux
         - uses: actions/upload-artifact@v1
           continue-on-error: true
@@ -28,5 +49,3 @@ jobs:
           with:
             name: logs
             path: logs
-
-
