--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -42,5 +42,12 @@ jobs:
             PROJECT_KEY: "https://jdeesh123.atlassian.net/jira/software/c/projects/TES/boards/2"
             TEST_ENVIRONMENTS: "NODE_${{ matrix.node-version }}"
           run: npm run test:browserstack.first.tst:linux
-        - name: xray-action
+        - name: "Import results to Xray"
           uses: mikepenz/xray-action@v3.0.4
+          with:
+            username: 07C307CA10C041D38DB399C56E1A1EDA
+            password: b8b00b1d4839d43c8e7c90060ff2e5d49c93eba268693dc5342451a8de4da8df
+            testFormat: "junit"
+            testPaths: "**/test/*.xml"
+            testExecKey: "TES-63"
+            projectKey: "ClientProject-1"
