--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -39,6 +39,6 @@ jobs:
             username: 07C307CA10C041D38DB399C56E1A1EDA
             password: b8b00b1d4839d43c8e7c90060ff2e5d49c93eba268693dc5342451a8de4da8df
             testFormat: "cucumber"
-            testPaths: "**/tests/*.xml"
+            testPaths: "./tests/*.xml"
             testExecKey: "TES-63"
             projectKey: "ClientProject-1"
