--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
         "@wdio/browserstack-service": "^7.30.1",
         "@wdio/cli": "^7.24.1",
         "@wdio/cucumber-framework": "^8.29.3",
-        "@wdio/local-runner": "^7.24.1",
+        "@wdio/local-runner": "^7.34.0",
         "@wdio/spec-reporter": "^7.24.1",
         "appium": "^1.22.3",
         "wdio-cucumberjs-json-reporter": "^5.1.8",
         "wdio-wait-for": "^2.2.6"
+    },
+    "dependencies": {
+        "@wdio/runner": "^8.29.7"
     }
 }
