--- a/.github/workflows/first-test.yaml
+++ b/.github/workflows/first-test.yaml
@@ -33,16 +33,12 @@ jobs:
           run: npm install
         - name: Test    
           run: npm run test:browserstack.first.tst:linux
-        - name: Output results file
-          run: |
-            cat xray-report.xml
         - name: "Import results to Xray"
-          uses: mikepenz/xray-action@v2.3.0
+          uses: mikepenz/xray-action@v3.0.4
           with:
             username: 07C307CA10C041D38DB399C56E1A1EDA
             password: b8b00b1d4839d43c8e7c90060ff2e5d49c93eba268693dc5342451a8de4da8df
             testFormat: "junit"
-            testPaths: "**/xray-report.xml"
+            testPaths: "**/tests/*.xml"
             testExecKey: "TES-63"
             projectKey: "ClientProject-1"
-            
